--- a/inner-page.html
+++ b/inner-page.html
@@ -125,19 +125,21 @@
       <!-- ======= Menu Section ======= -->
     <section id="menu" class="menu section-bg">
       <div class="container" data-aos="fade-up">
-
+<br>
+<br>
+<br>
         <div class="section-title">
           <h2>Menu</h2>
-          <p>Check Our Tasty Menu</p>
+<!--          <p>Check Our Tasty Menu</p>-->
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-starters">Starters</li>
-              <li data-filter=".filter-salads">Salads</li>
-              <li data-filter=".filter-specialty">Specialty</li>
+              <li data-filter="*" class="filter-active">Всё</li>
+              <li data-filter=".filter-starters">Напитки</li>
+              <li data-filter=".filter-salads">Закуски</li>
+              <li data-filter=".filter-specialty">Горячее</li>
             </ul>
           </div>
         </div>
