--- a/inner-page.html
+++ b/inner-page.html
@@ -147,6 +147,8 @@
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-6 menu-item filter-starters">
+<!--              <h1>Напитки</h1>-->
+<!--              <br>-->
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Напиток 1</a><span>$5.95</span>
@@ -177,6 +179,8 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
+<!--              <h1>Закуски</h1>-->
+<!--              <br>-->
             <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Закуска 1</a><span>$8.95</span>
@@ -207,6 +211,8 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
+<!--              <h1>Горячее</h1>-->
+<!--              <br>-->
             <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Горячее 1</a><span>$9.95</span>
