Настроил отображение разделов

--- a/inner-page.html
+++ b/inner-page.html
@@ -146,9 +146,12 @@
 
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-6 menu-item filter-starters">
-<!--              <h1>Напитки</h1>-->
-<!--              <br>-->
+            <div class="col-lg-6 menu-item filter-starters">
+            <div class="menu-sections">
+              <h2>Напитки</h2>
+            </div>
+            </div>
+            <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Напиток 1</a><span>$5.95</span>
@@ -179,8 +182,11 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
-<!--              <h1>Закуски</h1>-->
-<!--              <br>-->
+            <div class="menu-sections">
+              <h2>Закуски</h2>
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-salads">
             <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Закуска 1</a><span>$8.95</span>
@@ -211,8 +217,11 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
-<!--              <h1>Горячее</h1>-->
-<!--              <br>-->
+            <div class="menu-sections">
+              <h2>Горячее</h2>
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-specialty">
             <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Горячее 1</a><span>$9.95</span>
