--- a/index.html
+++ b/index.html
@@ -70,27 +70,8 @@
           <li><a class="nav-link scrollto active" href="#hero">Домой</a></li>
           <li><a class="nav-link scrollto" href="menu.html">Меню</a></li>
           <li><a class="nav-link scrollto" href="#about">О нас</a></li>
-<!--          <li><a class="nav-link scrollto" href="#specials">Specials</a></li>-->
           <li><a class="nav-link scrollto" href="#events">Мероприятия</a></li>
-<!--          <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>-->
           <li><a class="nav-link scrollto" href="#gallery">Галерея</a></li>
-<!--          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>-->
-<!--            <ul>-->
-<!--              <li><a href="#">Drop Down 1</a></li>-->
-<!--              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>-->
-<!--                <ul>-->
-<!--                  <li><a href="#">Deep Drop Down 1</a></li>-->
-<!--                  <li><a href="#">Deep Drop Down 2</a></li>-->
-<!--                  <li><a href="#">Deep Drop Down 3</a></li>-->
-<!--                  <li><a href="#">Deep Drop Down 4</a></li>-->
-<!--                  <li><a href="#">Deep Drop Down 5</a></li>-->
-<!--                </ul>-->
-<!--              </li>-->
-<!--              <li><a href="#">Drop Down 2</a></li>-->
-<!--              <li><a href="#">Drop Down 3</a></li>-->
-<!--              <li><a href="#">Drop Down 4</a></li>-->
-<!--            </ul>-->
-<!--          </li>-->
           <li><a class="nav-link scrollto" href="#contact">Контакты</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -105,17 +86,16 @@
     <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-lg-8">
-          <h1>Welcome to <span>Restaurantly</span></h1>
-          <h2>Delivering great food for more than 18 years!</h2>
+          <h1>Добро пожаловать в <span>БАР "ДЕПО"</span></h1>
+          <h2>Фирменные настойки и уютная атмосфера</h2>
 
           <div class="btns">
-            <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
-            <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Book a Table</a>
+            <a href="menu.html" class="btn-menu animated fadeInUp scrollto">Наше меню</a>
           </div>
         </div>
-        <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
-          <a href="https://www.youtube.com/watch?v=u6BOC7CDUTQ" class="glightbox play-btn"></a>
-        </div>
+<!--        <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">-->
+<!--          <a href="https://www.youtube.com/watch?v=u6BOC7CDUTQ" class="glightbox play-btn"></a>-->
+<!--        </div>-->
 
       </div>
     </div>
