--- a/menu.html
+++ b/menu.html
@@ -148,7 +148,7 @@
 
             <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-sections">
-              <h2>Напитки</h2>
+              <h2>Напитки 🍻</h2>
             </div>
             </div>
             <div class="col-lg-6 menu-item filter-starters">
@@ -183,7 +183,7 @@
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-sections">
-              <h2>Закуски</h2>
+              <h2>Закуски 🥓</h2>
             </div>
           </div>
           <div class="col-lg-6 menu-item filter-salads">
@@ -218,7 +218,7 @@
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-sections">
-              <h2>Горячее</h2>
+              <h2>Горячее 🥘</h2>
             </div>
           </div>
           <div class="col-lg-6 menu-item filter-specialty">
