Обновил раздел "О нас"

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
     <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-lg-8">
-          <h1>Добро пожаловать в <span>БАР "ДЕПО"</span></h1>
+          <h1>Добро пожаловать в</h1>
+          <h1><span>БАР "ДЕПО"</span></h1>
           <h2>Фирменные настойки и уютная атмосфера</h2>
 
           <div class="btns">
@@ -114,20 +115,17 @@
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Бар "Депо" на Малой Митрофаньевской 5</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Вы ищите место, в котором хотите вкусно пообедать, а может Вы желаете поужинать в кафе, но не можете ничего подобрать под свой вкус? Хотите встретиться с друзьями в хорошей и приятной обстановке или поужинать в кафе со своей любимой? Приходите к нам, в наш уютный бар!
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> В нашем баре Вы без труда реализуете свою встречу с друзьями в расслабляющей обстановке, покушать вкусные блюда и попробовать фирменные настойки.</li>
+              <li><i class="bi bi-check-circle"></i> Тематическое оформление нашего бара погрузит Вас в тёплую и приятную атмосферу и наполнит ваш вечер пололожительными эмоциями.</li>
+              <li><i class="bi bi-check-circle"></i> Зайти поужинать к нам в бар ещё обязательно надо по причине того, что у нас проводятся тематические вечеринки, с живой музыкой.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Так же нашем баре Вы можете отведать отличных бургеров, насладиться потрясающей коктейльной картой из которой каждый наш клиент выберет себе, что-то по душе.
             </p>
           </div>
         </div>
