Обновил раздел "О нас"

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </p>
             <ul>
               <li><i class="bi bi-check-circle"></i> В нашем баре Вы без труда реализуете свою встречу с друзьями в расслабляющей обстановке, покушать вкусные блюда и попробовать фирменные настойки.</li>
-              <li><i class="bi bi-check-circle"></i> Тематическое оформление нашего бара погрузит Вас в тёплую и приятную атмосферу и наполнит ваш вечер пололожительными эмоциями.</li>
+              <li><i class="bi bi-check-circle"></i> Тематическое оформление нашего бара погрузит Вас в тёплую и приятную атмосферу вечера и наполнит пололожительными эмоциями.</li>
               <li><i class="bi bi-check-circle"></i> Зайти поужинать к нам в бар ещё обязательно надо по причине того, что у нас проводятся тематические вечеринки, с живой музыкой.</li>
             </ul>
             <p>
