--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo.svg" rel="icon">
+  <link href="assets/img/logo.svg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -61,14 +61,14 @@
   <header id="header" class="fixed-top d-flex align-items-cente">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">БАР "ДЕПО"</a></h1>
+<!--      <h1 class="logo me-auto me-lg-0"><a href="index.html">БАР "ДЕПО"</a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+       <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.svg" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Домой</a></li>
           <li><a class="nav-link scrollto" href="menu.html">Меню</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Домой</a></li>
           <li><a class="nav-link scrollto" href="#about">О нас</a></li>
           <li><a class="nav-link scrollto" href="#events">Мероприятия</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Галерея</a></li>
@@ -409,7 +409,8 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Restaurantly</h3>
+               <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.svg" alt="" class="img-fluid"></a>
+<!--              <h3>Restaurantly</h3>-->
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
