--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Events</h2>
-          <p>Organize Your Events in our Restaurant</p>
+          <h2>Мероприятия</h2>
+          <p>Организуйте свои мероприятия в нашем баре</p>
         </div>
 
         <div class="events-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -238,8 +238,8 @@
 
       <div class="container" data-aos="fade-up">
         <div class="section-title">
-          <h2>Gallery</h2>
-          <p>Some photos from Our Restaurant</p>
+          <h2>Галерея</h2>
+          <p>Немного фотографий из нашего бара</p>
         </div>
       </div>
 
@@ -321,8 +321,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Contact Us</p>
+          <h2>Контакты</h2>
+          <p>Наши контакты</p>
         </div>
       </div>
 
