Обновил информацию на странице

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; <strong><span>Бар "ДЕПО" 2022-2023</span></strong>. Все права защищены
+        &copy; <strong><span>Бар "ДЕПО" 2022-2023</span></strong>. Все права сохранены
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
