Обновил информацию о мероприятиях

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
                   <img src="assets/img/event-birthday.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Birthday Parties</h3>
+                  <h3>Дни рождения</h3>
                   <div class="price">
-                    <p><span>$189</span></p>
+                    <p><span>₽9 000</span></p>
                   </div>
                   <p class="fst-italic">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -178,9 +178,9 @@
                   <img src="assets/img/event-private.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Private Parties</h3>
+                  <h3>Корпоративные вечеринки</h3>
                   <div class="price">
-                    <p><span>$290</span></p>
+                    <p><span>₽15 000</span></p>
                   </div>
                   <p class="fst-italic">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -205,9 +205,9 @@
                   <img src="assets/img/event-custom.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Custom Parties</h3>
+                  <h3>Праздничные мероприятия</h3>
                   <div class="price">
-                    <p><span>$99</span></p>
+                    <p><span>₽6 500</span></p>
                   </div>
                   <p class="fst-italic">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
