Обновил информацию о мероприятиях

--- a/index.html
+++ b/index.html
@@ -156,17 +156,15 @@
                     <p><span>₽9 000</span></p>
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
+                    Организуйте свой День Рождения вместе с Баром "ДЕПО"!.
                   </p>
                   <ul>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                    <li><i class="bi bi-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                    <li><i class="bi bi-check-circled"></i> Весёлая атмосфера. Живая музыка. </li>
+                    <li><i class="bi bi-check-circled"></i> Торт для именинника.</li>
+                    <li><i class="bi bi-check-circled"></i> Фотограф сделает несколько отличных кадров Вам на память.</li>
                   </ul>
                   <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
+                    Тем, кто выбрал наш бар для празднования дня рождения, стоит задуматься об интересной культурной программе. Мы можем организовать тематический праздник, например, в военном или «шпионском» стиле. Устройте вечер песен под гитару или караоке-вечеринку.
                   </p>
                 </div>
               </div>
@@ -183,17 +181,15 @@
                     <p><span>₽15 000</span></p>
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
+                    Ищете где с коллегами отметить юбилей работы или день рождение компании? Собраться всем вместе накануне предстоящего праздника?
                   </p>
                   <ul>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                    <li><i class="bi bi-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                    <li><i class="bi bi-check-circled"></i> У нас Вы сможете забронировать столик и заказать живую музыку.</li>
+                    <li><i class="bi bi-check-circled"></i> Приготовим или доставим закуски по Вашим предпочтениям.</li>
+                    <li><i class="bi bi-check-circled"></i> Авторская карта алкогольных напитков для Вашей компании.</li>
                   </ul>
                   <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
+                    Чтобы не заботиться о досуге гостей, поищите хорошего ведущего. Если вам захочется исполнить песни вашей юности, мы предоставим вам караоке. Выберите подходящие для вашего торжества блюда. Бар "ДЕПО" предлагает разнообразное и сытное меню, куда входит горячее, закуски и прохладительные напитки.
                   </p>
                 </div>
               </div>
@@ -210,17 +206,16 @@
                     <p><span>₽6 500</span></p>
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
+                    В нашем баре вы сможете организовать свои праздничные мероприятия по важному для Вас поводу или знаменательному событию в вашей жизни.
                   </p>
                   <ul>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                    <li><i class="bi bi-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                    <li><i class="bi bi-check-circled"></i> Авторские коктейли.</li>
+                    <li><i class="bi bi-check-circled"></i> Абонемент на выпивку.</li>
+                    <li><i class="bi bi-check-circled"></i> Подберём плейлист под тематику вашего праздника.</li>
                   </ul>
                   <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
+<!--                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate-->
+<!--                    velit esse cillum dolore eu fugiat nulla pariatur-->
                   </p>
                 </div>
               </div>
