--- a/menu.html
+++ b/menu.html
@@ -118,7 +118,7 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">Всё</li>
-              <li data-filter=".filter-starters">Напитки</li>
+              <li data-filter=".filter-cocktails">Коктейли</li>
               <li data-filter=".filter-salads">Закуски</li>
               <li data-filter=".filter-specialty">Горячее</li>
             </ul>
@@ -127,18 +127,19 @@
 
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-6 menu-item filter-starters">
+            <div class="col-lg-6 menu-item filter-cocktails">
             <div class="menu-sections">
-              <h2>Напитки 🍻</h2>
+              <h2>Коктейли 🍹</h2>
             </div>
             </div>
-            <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
+
+            <div class="col-lg-6 menu-item filter-cocktails">
+            <img src="assets/img/menu/gin-and-tonic.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Напиток 1</a><span>$5.95</span>
+              <a href="#">Джин-Тоник 0,25</a><span>₽350</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              На выбор: кардамон, ромашка, клубника, апельсин
             </div>
           </div>
 
