--- a/menu.html
+++ b/menu.html
@@ -10,8 +10,8 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-  <link href="assets/img/logo.svg" rel="icon">
-  <link href="assets/img/logo.svg" rel="apple-touch-icon">
+    <link href="assets/img/logo.svg" rel="icon">
+    <link href="assets/img/logo.svg" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -119,15 +119,15 @@
                 <div class="col-lg-12 d-flex justify-content-center">
                     <ul id="menu-flters">
                         <li data-filter="*" class="filter-active">Всё</li>
+                        <li data-filter=".filter-kitchen">Кухня</li>
+                        <li data-filter=".filter-tincture">Настойки</li>
                         <li data-filter=".filter-beer">Пиво</li>
-                        <li data-filter=".filter-cocktails">Коктейли</li>
-                        <li data-filter=".filter-salads">Закуски</li>
-                        <li data-filter=".filter-specialty">Горячее</li>
                     </ul>
                 </div>
             </div>
 
             <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
+                <!-- ======= Пиво ======= -->
                 <div class="col-lg-6 menu-item filter-beer">
                     <div class="menu-sections">
                         <h2>Пиво 🍺</h2>
@@ -170,112 +170,247 @@
                     </div>
                 </div>
 
-
-                <div class="col-lg-6 menu-item filter-cocktails">
+                <!-- ======= Настойки ======= -->
+                <div class="col-lg-6 menu-item filter-tincture">
                     <div class="menu-sections">
-                        <h2>Коктейли 🍹</h2>
+                        <h2>Настойки 🫗</h2>
                     </div>
                 </div>
-
-                <div class="col-lg-6 menu-item filter-cocktails">
-                    <img src="assets/img/menu/gin-and-tonic.jpg" class="menu-img" alt="">
+                <div class="col-lg-6 menu-item filter-tincture">
                     <div class="menu-content">
-                        <a href="#">Джин-Тоник 0,25</a><span>₽350</span>
-                    </div>
-                    <div class="menu-ingredients">
-                        На выбор: кардамон, ромашка, клубника, апельсин
+                        <a href="#">СМОРОДИНА, МЯТА, ГРУША</a><span>₽150</span>
                     </div>
                 </div>
-
-                <div class="col-lg-6 menu-item filter-starters">
-                    <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
+                <div class="col-lg-6 menu-item filter-tincture">
                     <div class="menu-content">
-                        <a href="#">Напиток 2</a><span>$6.95</span>
+                        <a href="#">ХЛЕБНОЕ ВИНО НА МОЖЖЕВЕЛЬНИКЕ</a><span>₽220</span>
                     </div>
                 </div>
-
-                <div class="col-lg-6 menu-item filter-starters">
-                    <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
+                <div class="col-lg-6 menu-item filter-tincture">
                     <div class="menu-content">
-                        <a href="#">Напиток 3</a><span>$7.95</span>
+                        <a href="#">ВИШНЯ НА БУРБОНЕ</a><span>₽220</span>
                     </div>
-                    <div class="menu-ingredients">
-                        A delicate crab cake served on a toasted roll with lettuce and tartar sauce
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">Ч.СМОРОДИНА С МОЖЖЕВЕЛЬНИКОМ</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">ЯБЛОКО С КОРИЦЕЙ</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">ГРУША, БАЗИЛИК</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">ПЕРЦОВКА</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">ХРЕНОВУХА</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">РОМ С ГРЕЙПФРУТОМ И КОКОСОМ</a><span>₽220</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">БОРОДИНСКАЯ</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">КОРОВКА</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">ЛАЙМ, ЛАВАНДА, ИМБИРЬ</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">БАНАН, СОЛЕНАЯ КАРАМЕЛЬ</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">КИВИ, ЛАЙМ</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">ЛЕБОВСКИ</a><span>₽150</span>
                     </div>
                 </div>
 
-                <div class="col-lg-6 menu-item filter-salads">
+
+                <!-- ======= Кухня ======= -->
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-sections">
-                        <h2>Закуски 🥓</h2>
+                        <h2>Кухня 🥘</h2>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-salads">
-                    <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a href="#">Закуска 1</a><span>$8.95</span>
-                    </div>
-                    <div class="menu-ingredients">
-                        Lorem, deren, trataro, filede, nerada
+                        <a href="#">СЕЛЕДКА С БОРОДИНСКИМ ХЛЕБОМ</a><span>₽200</span>
                     </div>
                 </div>
-
-                <div class="col-lg-6 menu-item filter-salads">
-                    <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a href="#">Закуска 2</a><span>$9.95</span>
-                    </div>
-                    <div class="menu-ingredients">
-                        Grilled chicken with provolone, artichoke hearts, and roasted red pesto
+                        <a href="#">БУТЕРБРОДЫ СО ШПРОТАМИ И МАРИНОВАННЫМ ЯЙЦОМ</a><span>₽250</span>
                     </div>
                 </div>
-
-                <div class="col-lg-6 menu-item filter-salads">
-                    <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a href="#">Закуска 3</a><span>$4.95</span>
-                    </div>
-                    <div class="menu-ingredients">
-                        Lorem, deren, trataro, filede, nerada
+                        <a href="#">БУТЕРБРОДЫ С ДОМАШНИМ ПАШТЕТОМ И МАРМЕЛАДНЫМ ЛУКОМ</a><span>₽250</span>
                     </div>
                 </div>
-
-                <div class="col-lg-6 menu-item filter-specialty">
-                    <div class="menu-sections">
-                        <h2>Горячее 🥘</h2>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-specialty">
-                    <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a href="#">Горячее 1</a><span>$9.95</span>
-                    </div>
-                    <div class="menu-ingredients">
-                        Fresh spinach, crisp romaine, tomatoes, and Greek olives
+                        <a href="#">САЛО ДВУХ ВИДОВ</a><span>₽250</span>
                     </div>
                 </div>
-
-                <div class="col-lg-6 menu-item filter-specialty">
-                    <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a href="#">Горячее 2</a><span>$9.95</span>
-                    </div>
-                    <div class="menu-ingredients">
-                        Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
+                        <a href="#">КАРТОФЕЛЬ АЙДАХО</a><span>₽120</span>
                     </div>
                 </div>
-
-                <div class="col-lg-6 menu-item filter-specialty">
-                    <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt="">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a href="#">Горячее 3</a><span>$12.95</span>
-                    </div>
-                    <div class="menu-ingredients">
-                        Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
+                        <a href="#">ПЕЛЬМЕНИ ФРИ</a><span>160</span>
                     </div>
                 </div>
-
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">ГРЕНКИ С ЧЕСНОКОМ И СЫРОМ</a><span>₽200</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">КАРТОФЕЛЬ ФРИ</a><span>₽100</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">НАГГЕТСЫ</a><span>₽130</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">НАГГЕТСЫ С КАРТОФЕЛЕМ ФРИ</a><span>₽220</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">КАРТОФЕЛЬНЫЕ ДОЛЬКИ С КОЛБАСКАМИ В BBQ СОУСЕ</a><span>₽290</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">САЛАТ ДАЧНЫЙ СО СМЕТАНОЙ</a><span>₽200</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">КУРИНАЯ КОТЛЕТА С СЫРОМ И ЗАПЕЧЕННЫМ КАРТОФЕЛЕМ (ВРЕМЕННО НЕТ)</a><span>₽300</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">СЕНДВИЧ С ВЕТЧИНОЙ И СЫРОМ</a><span>₽230</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">СЕНДВИЧ С ТУНЦОМ</a><span>₽280</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">БУРГЕР НА ТАРЕЛКЕ</a><span>₽450</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">БУРГЕР С ГОВЯДИНОЙ</a><span>₽370</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">БУРГЕР С КУРИЦЕЙ</a><span>₽300</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">БУРГЕР ТЕХАС BBQ (ВРЕМЕННО НЕТ)</a><span>₽400</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">БУРГЕР С АДЫГЕЙСКИМ СЫРОМ</a><span>₽350</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">ХОТ-ДОГ</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">МИНДАЛЬ</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">ФИСТАШКИ</a><span>₽270</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">АРАХИС</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">НАЧОС С СОУСОМ</a><span>₽200</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">СЫР КОСИЧКА</a><span>₽200</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">ЯЙЦО МАРИНОВАННОЕ</a><span>₽50</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">МЯСО ВЯЛЕНОЕ (СВИНИНА, ГОВЯДИНА)</a><span>₽350</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">МЯСНЫЕ ЧИПСЫ</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a href="#">СОУС(BBQ, ЧЕСНОЧНЫЙ, КЕТЧУП, СЫРНЫЙ, ТЕРИЯКИ, КИСЛО-СЛАДКИЙ, ОСТРЫЙ/СЛАДКИЙ
+                            ЧИЛИ)</a><span>₽40</span>
+                    </div>
+                </div>
             </div>
-
         </div>
     </section><!-- End Menu Section -->
 
